deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-shim
  namespace: vault-shim
  labels:
    app.kubernetes.io/name: vault-shim
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: vault-shim
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
